--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
                         <div class="card bg-secondary border-danger text-white m-3 p-1 col col-lg-9"
                             id="placeholderForGif">
                             <div class="card-body m-3 p-1">
-                                <p>After starting a search below, Gifs will appear to remind you of what Age Range, Platform, and Genre you are searching for. Click each gif to start it!</p>
+                                <p>After starting a search below, Gifs will appear to remind you of what Age Range,
+                                    Platform, and Genre you are searching for. Click each gif to start it!</p>
                                 <div id="gifs-appear-here"></div>
                             </div>
                         </div>
@@ -115,6 +116,8 @@
                                     <button id="adult" class="dropdown-item ages" type="button" value="adult-only">Adult
                                         Only</button>
                                 </div>
+                            </div>
+                            <div class="btn-group">
                                 <button id="platform" class="btn btn-secondary btn-lg m-1 dropdown-toggle" type="button"
                                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Platform
@@ -128,6 +131,8 @@
                                     <button id="xboxOne" class="dropdown-item plat" type="button" value="xbox-one">Xbox
                                         One</button>
                                 </div>
+                            </div>
+                            <div class="btn-group">
                                 <button id="genre" class="btn btn-secondary btn-lg m-1 dropdown-toggle" type="button"
                                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Genres
@@ -147,6 +152,7 @@
                                     <button id="arcade" class="dropdown-item gen" type="button"
                                         value="arcade">Arcade</button>
                                 </div>
+                            </div>
                                 <button id="search" class="text-white bg-secondary border-danger m-3 p-1">Search
                                 </button>
                             </div>
